--- a/requirements.txt
+++ b/requirements.txt
@@ -1,22 +1,22 @@
-﻿beautifulsoup4==4.12.3
-blinker==1.7.0
-bs4==0.0.2
-certifi==2024.2.2
-charset-normalizer==3.3.2
-click==8.1.7
-colorama==0.4.6
-Flask==3.0.2
-idna==3.6
-itsdangerous==2.1.2
-Jinja2==3.1.3
-joblib==1.3.2
-MarkupSafe==2.1.5
-nltk==3.8.1
-psycopg2==2.9.9
-regex==2023.12.25
-requests==2.31.0
-soupsieve==2.5
-tqdm==4.66.2
-urllib3==2.2.1
-Werkzeug==3.0.1
+﻿beautifulsoup4
+blinker
+bs4
+certifi
+charset-normalizer
+click
+colorama
+Flask
+idna
+itsdangerous
+Jinja2
+joblib
+MarkupSafe
+nltk
+psycopg2
+regex
+requests
+soupsieve
+tqdm
+urllib3
+Werkzeug
 gunicorn
